--- a/Journal/Journal/Views/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Views/Base.lproj/Main.storyboard
@@ -84,7 +84,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3208.6956521739135" y="-581.25"/>
+            <point key="canvasLocation" x="3329" y="-640"/>
         </scene>
         <!--Journal-->
         <scene sceneID="har-ai-R7W">
@@ -145,6 +145,7 @@
                                     <outlet property="dateLabel" destination="9ii-3g-JbV" id="b7q-Op-n4Q"/>
                                     <outlet property="textView" destination="ES5-1O-tm1" id="OY0-HK-XmH"/>
                                     <outlet property="titleLabel" destination="uCW-nw-ig2" id="Kya-A3-M80"/>
+                                    <segue destination="kxR-ib-cM0" kind="show" identifier="editSegue" id="LCa-b2-FT4"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -156,14 +157,14 @@
                     <navigationItem key="navigationItem" title="Journal" id="Nsa-xX-ekZ">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="0tt-Xp-zT9">
                             <connections>
-                                <segue destination="hZg-tW-PFl" kind="presentation" id="Yie-gT-xD1"/>
+                                <segue destination="hZg-tW-PFl" kind="presentation" identifier="createSegue" id="Yie-gT-xD1"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bZn-qE-ftW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1628.985507246377" y="44.866071428571423"/>
+            <point key="canvasLocation" x="1635" y="45"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="mYl-MF-51e">
@@ -199,7 +200,80 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JP2-9W-8NU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2299" y="-581"/>
+            <point key="canvasLocation" x="2419" y="-640"/>
+        </scene>
+        <!--Add Journal Entry-->
+        <scene sceneID="8H0-2E-xnm">
+            <objects>
+                <viewController id="kxR-ib-cM0" customClass="CreateEntryViewController" customModule="Journal" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="bE7-QG-lHH">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="13" translatesAutoresizingMaskIntoConstraints="NO" id="34I-Fh-G02">
+                                <rect key="frame" x="20" y="160" width="374" height="257.5"/>
+                                <subviews>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="Yqx-vl-hQi">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="32"/>
+                                        <segments>
+                                            <segment title="🙂"/>
+                                            <segment title="😐"/>
+                                            <segment title="🙁"/>
+                                        </segments>
+                                    </segmentedControl>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Journal Entry Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="s0T-Dc-thd">
+                                        <rect key="frame" x="0.0" y="44" width="374" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Entry" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kYg-lM-4xH">
+                                        <rect key="frame" x="0.0" y="91" width="374" height="14.5"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VaC-wR-Vzx">
+                                        <rect key="frame" x="0.0" y="118.5" width="374" height="4"/>
+                                        <color key="backgroundColor" systemColor="systemGray4Color" red="0.81960784310000001" green="0.81960784310000001" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="4" id="rzg-qX-Ym7"/>
+                                        </constraints>
+                                    </view>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="oTN-jb-bb6">
+                                        <rect key="frame" x="0.0" y="135.5" width="374" height="122"/>
+                                        <color key="backgroundColor" systemColor="systemGray5Color" red="0.8980392157" green="0.8980392157" blue="0.91764705879999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="34I-Fh-G02" firstAttribute="height" secondItem="bE7-QG-lHH" secondAttribute="height" multiplier="0.287388" id="4Ul-TD-kAQ"/>
+                            <constraint firstItem="JvH-Yc-bAf" firstAttribute="trailing" secondItem="34I-Fh-G02" secondAttribute="trailing" constant="20" id="If9-ye-hLM"/>
+                            <constraint firstItem="34I-Fh-G02" firstAttribute="leading" secondItem="JvH-Yc-bAf" secondAttribute="leading" constant="20" id="b9A-gS-s5f"/>
+                            <constraint firstItem="34I-Fh-G02" firstAttribute="top" secondItem="JvH-Yc-bAf" secondAttribute="top" constant="20" id="ymd-aF-8DP"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="JvH-Yc-bAf"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Add Journal Entry" id="Duv-uz-vXo">
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="Fcb-q8-uF2">
+                            <connections>
+                                <action selector="cancelButtonPressed:" destination="kxR-ib-cM0" id="pDb-BF-GKm"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="edit" id="fBL-qm-Z22">
+                            <connections>
+                                <action selector="saveButtonPressed:" destination="kxR-ib-cM0" id="QpC-vu-omN"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="21R-YX-TDp" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2446" y="45"/>
         </scene>
     </scenes>
 </document>
