change tableview controller's title in the storyboard to "Journal - Day 2"

--- a/Journal/Journal/Storyboards/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Storyboards/Base.lproj/Main.storyboard
@@ -7,7 +7,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Journal-->
+        <!--Journal - Day 2-->
         <scene sceneID="3Ah-60-rxA">
             <objects>
                 <tableViewController id="IG7-oO-ZFD" customClass="EntriesTableViewController" customModule="Journal" customModuleProvider="target" sceneMemberID="viewController">
@@ -76,7 +76,7 @@ relate befell us.</string>
                             <outlet property="delegate" destination="IG7-oO-ZFD" id="kBy-45-Ny5"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Journal" id="Kpw-Me-fBy">
+                    <navigationItem key="navigationItem" title="Journal - Day 2" id="Kpw-Me-fBy">
                         <barButtonItem key="rightBarButtonItem" title="Item" image="plus.square" catalog="system" id="Fuq-dH-mT4">
                             <connections>
                                 <segue destination="a9b-7a-cr5" kind="presentation" modalPresentationStyle="fullScreen" id="jI3-Id-ksO"/>
