add iboutlet for moodsegmentedcontrol

--- a/Journal/Journal/Storyboards/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Storyboards/Base.lproj/Main.storyboard
@@ -165,6 +165,7 @@ relate befell us.</string>
                     </navigationItem>
                     <connections>
                         <outlet property="bodyTextView" destination="VYK-Vk-c0C" id="GDu-WO-d5o"/>
+                        <outlet property="moodSegmentedControl" destination="b5z-Yr-S6Q" id="OYT-F5-XMW"/>
                         <outlet property="titleTextField" destination="k8J-qq-w0b" id="n9F-3V-Uhp"/>
                     </connections>
                 </viewController>
